--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
 		"target": "es6",
 		"moduleResolution": "node",
 		"sourceMap": true,
-		"outDir": "src/",
+		"rootDir": "src",
+		"outDir": "dist/",
 		"removeComments": true,
 		"lib": [
 			"es2015"
