--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@types/ws": "^7.2.2",
     "mocha": "^7.1.0",
     "ts-loader": "^6.2.1",
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "webpack": "^4.42.0",
+    "webpack-cli": "^3.3.11"
   },
   "scripts": {
-    "start": "node dist/Server/Server.js",
-    "server": "node dist/Server/Server.js"
+    "start": "node dist/bundle.js",
+    "build": "webpack",
+    "go": "webpack && nodemon dist/bundle.js"
   },
   "author": "",
   "license": "ISC"
