--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@types/node": "^13.9.0",
     "@types/ws": "^7.2.2",
+    "copy-webpack-plugin": "^5.1.1",
     "mocha": "^7.1.0",
     "ts-loader": "^6.2.1",
     "typescript": "^3.8.3",
